--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="robots" content="noindex, nofollow">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -297,5 +297,6 @@
 
     <script src="../js/developer.js"></script>
 </body>
+
 
 </html>
