--- a/index.html
+++ b/index.html
@@ -295,8 +295,9 @@
         </main>
     </div>
 
-    <script src="../js/developer.js"></script>
+    <script src="js/developer.js"></script>
 </body>
 
 
 </html>
+
