--- a/index.html
+++ b/index.html
@@ -284,6 +284,13 @@
                             <li>Commit and push your changes</li>
                         </ol>
                     </div>
+                    <div class="json-output-container">
+                        <pre id="json-output"></pre>
+                        <button type="button" class="copy-json-btn" onclick="copyJsonToClipboard()">
+                            <i class="fas fa-copy"></i> Copy JSON
+                        </button>
+                    </div>
+
                     <!-- Image Files Section -->
                     <div class="image-files-section">
                         <h3><i class="fas fa-images"></i> Image Files to Upload</h3>
@@ -302,5 +309,3 @@
 
 
 </html>
-
-
